--- a/Carros.html
+++ b/Carros.html
@@ -59,7 +59,7 @@
     </main>
     <footer>
 
-        <a href="https://www.instagram.com/profsandromesquita/" target="_blank"target="_blank" rel="external">
+        <a href="https://www.instagram.com/Cristiano/" target="_blank"target="_blank" rel="external">
             <img class="icons" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/120px-Instagram_logo_2016.svg.png?20210403190622" alt="logo do instagram">
         </a>
 
