--- a/toyota.html
+++ b/toyota.html
@@ -57,7 +57,7 @@
             
             
             <div class="car-type">
-                <img  class="img_carro" src="https://cdn.carbuzz.com/gallery-images/1600/972000/300/972350.jpg" alt="">
+                <img  class="img_carro" src="https://s3.amazonaws.com/toyota.site.toyota-v5/tci-prod/toyota/media/build/sup/col/big/b24_db0c0_fl1_0d14_b.png?ck=08162024114528" alt="">
                 <h3>SUPRA MK5 - 5st Gen (J29/A90)</h3>
                 <h3 class="preco">U$ 57,359</h3>
                 <div class="informes">
@@ -84,6 +84,8 @@
             <img class="icons" src="https://cdn-icons-png.flaticon.com/128/3955/3955011.png"target="_blank" rel="external">
         </a>
 
+
+        <p style="font-style: italic;" >Kievzera &copy;</p>
         </footer>
 </body>
 </html>
